<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileHomeFragment">


    <ImageView
        android:id="@+id/iv_background_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/default_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/iv_background_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_background_photo">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/iv_profile"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/default_profile"
            app:civ_border="false" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="12dp"
            android:gravity="center|center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:gravity="center|center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            tools:text="@string/status_message" />

        <Button
            android:id="@+id/bt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@android:color/background_dark"
            android:drawableTop="@drawable/ic_exit"
            android:gravity="center"
            android:text="@string/logout"

            android:textSize="11sp"
            app:backgroundTint="@null" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>