<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".profile.ProfileEditFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:text="@string/profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/textColorPrimary" />

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/tv_title"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_photo_frame"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/iv_background_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/default_background" />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/iv_profile"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerInParent="true"
                android:src="@drawable/default_profile"
                app:civ_border="false" />

            <Button
                android:id="@+id/bt_add_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="72dp"
                android:background="@drawable/pick_image_button"
                android:elevation="5dp"
                android:gravity="center_vertical|center_horizontal"
                app:backgroundTint="@null"
                tools:ignore="SpeakableTextPresentCheck" />
        </RelativeLayout>


        <Button
            android:id="@+id/bt_add_background_photo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@id/cv_photo_frame"
            android:layout_alignBottom="@id/cv_photo_frame"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/pick_image_button"
            android:elevation="5dp"
            android:gravity="center_vertical|center_horizontal"
            app:backgroundTint="@null"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/textColorPrimary" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/ic_arrow_right_white"
            android:hint="@string/not_set"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@color/textColorPrimary"
            tools:text="@string/name"
            tools:textColor="@color/textColorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_status_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/status_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/textColorPrimary" />

        <EditText
            android:id="@+id/et_status_message"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/ic_arrow_right_white"
            android:hint="@string/not_set"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="@color/textColorPrimary" />
    </LinearLayout>
</LinearLayout>